# MLH-Axon

./: .gitignore  DEPLOYMENT.md  README.md  package-lock.json  package.json  pyproject.toml  pytest.ini  quickstart.md  test.toml  wrangler.toml
docs/: README.md  api-reference.md  architecture.md  deployment.md  development.md  getting-started.md  model_training.md  troubleshooting.md
public/: dashboard.html
scripts/: CAPTURE_README.md  capture_traffic.py  convert_traffic_to_csv.py  generate_synthetic_legit_traffic.py  generate_test_traffic.py  json_to_sql.py  prepare_features.py  requirements_capture.txt
src/: features.py  honeypot.py  schema.sql  stats.py  traffic_monitor.py  worker.py
tests/: README.md  __init__.py  requirements_test.txt  test_features.py  test_honeypot.py  test_integration.py
traffic_data/: TRAINING_DATA_README.md  balanced_training_data.csv  combined_traffic.jsonl  db1_training_data.csv  db1_training_data.json  db_training_data.json  legit_traffic.jsonl  traffic_log.jsonl  training_data.csv
