[[tool.uv.index]]
url = "https://test.pypi.org/simple"
default = true

[project]
name = "axon"
version = "0.1.0"
description = "AI-powered bot detection at the edge"
requires-python = ">=3.12"
dependencies = [
    "fastapi"
]

[tool.pywrangler]
name = "axon"
main = "src/worker.py"
compatibility_date = "2024-04-01"
compatibility_flags = ["python_workers"]

[tool.pywrangler.durable_objects]
bindings = [
    { name = "TRAFFIC_MONITOR", class_name = "TrafficMonitor", script_name = "axon" }
]

[tool.pywrangler.d1_databases]
bindings = [
    { binding = "DB", database_name = "axon-db", database_id = "c76c6bcb-76cb-40ff-b5c3-0d96f32f0597" }
]

[tool.pywrangler.ai]
binding = "AI"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
  "workers-py",
  "workers-runtime-sdk"
]


